# win-cleaner

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  go.mod  go.sum  main.go
.cargo/: audit.toml
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml
cmd/wincleaner/: main.go
crates/cleaner-app/: Cargo.toml  app.manifest  app.rc  build.rs
crates/cleaner-app/src/: app.rs  diagnostics.rs  icons.rs  main.rs  strings.rs  theme.rs  viewmodel.rs  worker.rs
crates/cleaner-app/src/ui/: about.rs  components.rs  history.rs  mod.rs  progress.rs  results.rs  scan.rs  select.rs  sidebar.rs
crates/cleaner-catalog/: Cargo.toml
crates/cleaner-catalog/src/: lib.rs
crates/cleaner-core/: Cargo.toml
crates/cleaner-core/src/: catalog.rs  empty_folders.rs  error.rs  execute.rs  format.rs  globs.rs  lib.rs  plan.rs  roots.rs  safety.rs  scan.rs  stats.rs
crates/cleaner-platform/: Cargo.toml
crates/cleaner-platform/src/: known_folders.rs  lib.rs  recycle.rs  roots.rs
internal/cleaner/: delete.go  doc.go  empty_folders.go  empty_folders_test.go  errors.go  format.go  gui.go  registry.go  scan.go  stats.go  stats_test.go
internal/gui/: about.go  cache.go  components.go  components_test.go  empty.go  fonts.go  gui.go  history.go  icons.go  results.go  shared.go  strings.go  theme.go  viewmodel.go  viewmodel_test.go  workspace.go
internal/trash/: trash.go  trash_test.go  trash_windows.go
scripts/: benchmark-scanners.ps1  package-windows.sh
