[workspace]
members = [
    "crates/cleaner-core",
    "crates/cleaner-catalog",
    "crates/cleaner-platform",
    "crates/cleaner-app",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/handsomefox/win-cleaner"
description = "A Windows desktop app that safely cleans application and system caches via the Recycle Bin"

[workspace.dependencies]
crossbeam-channel = "0.5"
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland", "x11"] }
egui_extras = { version = "0.35", features = ["image", "svg"] }
image = { version = "0.25", default-features = false, features = ["png"] }
jiff = { version = "0.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[profile.release]
lto = "thin"
strip = true

[workspace.lints.rust]
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
