[package]
name = "cleaner-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The built-in catalog of cache locations win-cleaner knows how to clean"

[lints]
workspace = true

[dependencies]
cleaner-core = { version = "=1.0.5", path = "../cleaner-core" }

[dev-dependencies]
tempfile.workspace = true
