[package]
name = "cleaner-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Portable domain logic for win-cleaner: cleanup catalog, scanning, planning, execution, and run statistics"

[lints]
workspace = true

[dependencies]
jiff.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
